lagt til currentHP i myPokemon-objekt

--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -339,6 +339,7 @@
             id: myPokemonData.id,
             name: myPokemonData.name,
             maxHP: myPokemonHP,
+            currentHP: myPokemonHP,
             alive: true,
           };
 
