--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -55,9 +55,7 @@
 
     <script>
       let enemiesArray = [];
-
       let myPokemonsArray = [];
-
       let pokemonId;
       let enemy;
 
@@ -66,7 +64,7 @@
         try {
           const randomPokemon = [];
           for (let i = 0; i < 3; i++) {
-            const randomPokemonId = Math.floor(Math.random() * 400) + 1;
+            const randomPokemonId = Math.floor(Math.random() * 250) + 1;
             const randomPokemonRequest = await fetch(
               "https://pokeapi.co/api/v2/pokemon/" + randomPokemonId
             );
@@ -388,8 +386,10 @@
           ).textContent = `HP: ${myPokemon.currentHP}`;
         }
 
-        const cheriSkill = document.querySelectorAll("#skills-list .skill")[3];
-        cheriSkill.addEventListener("click", useCherry);
+        const cherrySkill = document.querySelectorAll("#skills-list .skill")[3];
+        cherrySkill.addEventListener("click", function () {
+          useCherry();
+        });
       });
 
       function myPokemonAttack() {
