Lager ny funksjon for besvimt pokemon

--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -434,6 +434,13 @@
         }
       }
 
+      async function replaceFaintedPokemon() {
+        try {
+        } catch (error) {
+          console.error("Klarte ikke laste ny Pokemon/fiende", error);
+        }
+      }
+
       showPokemonImages();
       addPokemonNameData();
       saveEnemyMoves();
