hardkode fetchlink til hver pokemon

--- a/pokemon_battle.html
+++ b/pokemon_battle.html
@@ -90,9 +90,17 @@
 
           return { enemy1, myPokemon1, enemy2, myPokemon2, enemy3, myPokemon3 };
 
-          const enemyImgUrl = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${enemyId}.png`;
+          const enemyImgUrl1 = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${enemy1}.png`;
 
-          const myPokemonImgUrl = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${myPokemonId}.png`;
+          const myPokemonImgUrl1 = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${myPokemon1}.png`;
+
+          const enemyImgUrl2 = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${enemy2}.png`;
+
+          const myPokemonImgUrl2 = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${myPokemon2}.png`;
+
+          const enemyImgUrl3 = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${enemy3}.png`;
+
+          const myPokemonImgUrl3 = `https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/${myPokemon3}.png`;
 
           const enemyContainer = document.querySelector(
             ".enemy-container .img-container.enemy"
